WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
76100
IndexedDB: Throw exception if IDBCursor.continue() called with key equal to current
https://bugs.webkit.org/show_bug.cgi?id=76100
Summary
IndexedDB: Throw exception if IDBCursor.continue() called with key equal to c...
Joshua Bell
Reported
2012-01-11 13:34:25 PST
IndexedDB: Throw exception if IDBCursor.continue() called with key equal to current
Attachments
Patch
(12.68 KB, patch)
2012-01-11 13:37 PST
,
Joshua Bell
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Joshua Bell
Comment 1
2012-01-11 13:37:14 PST
Created
attachment 122084
[details]
Patch
Joshua Bell
Comment 2
2012-01-11 16:01:15 PST
Comment on
attachment 122084
[details]
Patch tony@ - cq? (Forgot to mark this one)
Joshua Bell
Comment 3
2012-01-12 13:33:02 PST
Re-adding tony@ to CC list. Can I get a cq+ ?
WebKit Review Bot
Comment 4
2012-01-12 15:12:45 PST
Comment on
attachment 122084
[details]
Patch Clearing flags on attachment: 122084 Committed
r104865
: <
http://trac.webkit.org/changeset/104865
>
WebKit Review Bot
Comment 5
2012-01-12 15:12:49 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug