IndexedDB: Throw exception if IDBCursor.continue() called with key equal to current https://bugs.webkit.org/show_bug.cgi?id=76100

Source/WebCore:

The fix for https://bugs.webkit.org/show_bug.cgi?id=74213 missed the "or equal" clause
in the spec.

Patch by Joshua Bell <jsbell@chromium.org> on 2012-01-12
Reviewed by Tony Chang.

Test: storage/indexeddb/cursor-continue.html

* storage/IDBCursorBackendImpl.cpp:
(WebCore::IDBCursorBackendImpl::continueFunction):

LayoutTests:

The previously existing clauses that iterated a cursor over non-unique values
by specifing a key now fail per spec, so they are changed to simply call continue().

Patch by Joshua Bell <jsbell@chromium.org> on 2012-01-12
Reviewed by Tony Chang.

* storage/indexeddb/cursor-continue-expected.txt:
* storage/indexeddb/cursor-continue.html:

Canonical link: https://commits.webkit.org/93024@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104865 268f45cc-cd09-0410-ab3c-d52691b4dbfc